--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -23,6 +23,11 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
     
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    
     - name: Cache Maven dependencies
       uses: actions/cache@v4
       with:
@@ -30,16 +35,66 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     
+    - name: Cache npm dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-npm-${{ hashFiles('src/typescript-runtime/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-npm-
+          ${{ runner.os }}-
+    
     - name: Create foundation directory
       run: |
         sudo mkdir -p /var/foundation
         sudo chmod 777 /var/foundation
     
+    - name: Install TypeScript runtime dependencies
+      run: |
+        cd src/typescript-runtime
+        echo "Installing TypeScript runtime dependencies..."
+        npm install --legacy-peer-deps
+    
+    - name: Start TypeScript runtime server
+      run: |
+        cd src/typescript-runtime
+        echo "Starting TypeScript runtime server on port 3000..."
+        npm run dev &
+        SERVER_PID=$!
+        echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
+        # Wait for server to start
+        sleep 15
+        # Check if server is running by trying to connect
+        for i in {1..5}; do
+          if curl -f http://localhost:3000/run -X POST -H "Content-Type: application/json" -d '{"snippet":"console.log(\"test\")"}' 2>/dev/null; then
+            echo "TypeScript runtime server is ready"
+            break
+          else
+            echo "Waiting for server to start... attempt $i/5"
+            sleep 5
+          fi
+        done
+    
     - name: Run mcpagent integration tests
       run: |
         cd src/mcpagent
         echo "Running mcpagent integration tests..."
-        mvn test -Dtest="*IntegrationTest" || echo "Integration tests require external dependencies - skipping for now"
+        # Run integration tests and capture exit code
+        if mvn test -Dtest="*IntegrationTest"; then
+          echo "Integration tests passed"
+        else
+          echo "Integration tests failed - this may be expected if external dependencies are not available"
+          # Don't fail the entire pipeline for integration test failures
+          exit 0
+        fi
+    
+    - name: Stop TypeScript runtime server
+      if: always()
+      run: |
+        if [ ! -z "$SERVER_PID" ]; then
+          echo "Stopping TypeScript runtime server (PID: $SERVER_PID)"
+          kill $SERVER_PID || echo "Server already stopped"
+        fi
     
     - name: Upload integration test results
       uses: actions/upload-artifact@v4
