fix: resolve GitHub Actions workflow syntax error
- Move continue-on-error from job level to reusable workflow level
- Fix 'Unexpected value continue-on-error' error in pr-checks.yml
- Maintain non-blocking behavior for integration tests

The continue-on-error property cannot be used on jobs that call reusable workflows.
It must be placed within the reusable workflow itself.

--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -13,6 +13,7 @@ jobs:
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
+    continue-on-error: true  # Don't fail pipeline if integration tests fail
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
