feat: add comprehensive service validation for all three components
- Create new service validation workflow to test HTTP services and artifacts
- Add artifact verification for mcpagent JAR, acme-analytics-server JAR, and typescript-runtime dist
- Implement HTTP endpoint testing for all three services:
  * mcpagent: /actuator/health, /mcp endpoints
  * acme-analytics-server: /health, /fields, /query endpoints
  * typescript-runtime: /run, /sdk/upload endpoints
- Add service startup validation with health checks and retry logic
- Implement proper service lifecycle management (start/stop)
- Add service integration testing to verify all services work together
- Update pipeline to include service validation as Stage 4
- Rename final stage to End-to-End Validation for clarity
- Update test configuration with service endpoint definitions

Pipeline now validates:
1. Unit Tests (fast feedback)
2. Integration Tests (component interactions)
3. Build (compile and package)
4. Service Validation (HTTP services and artifacts) ← NEW
5. Docker Build (multi-platform containers)
6. End-to-End Validation (final Docker testing)

This ensures all three projects produce working artifacts that can serve HTTP requests
and are ready for Docker deployment.

--- a/.github/test-config.yml
+++ b/.github/test-config.yml
@@ -68,6 +68,27 @@ service_validation:
   platforms:
     - "linux/amd64"
     - "linux/arm64"
+  
+  # HTTP Service Endpoints to validate
+  services:
+    mcpagent:
+      port: 8080
+      health_endpoint: "/actuator/health"
+      mcp_endpoint: "/mcp"
+      expected_response: "UP"
+    
+    acme_analytics_server:
+      port: 8081
+      health_endpoint: "/health"
+      fields_endpoint: "/fields"
+      query_endpoint: "/query"
+      expected_response: "healthy"
+    
+    typescript_runtime:
+      port: 3000
+      run_endpoint: "/run"
+      upload_endpoint: "/sdk/upload"
+      expected_response: "success"
 
 # Performance and Optimization
 performance:
