feat: add proper workflow dependencies and execution order
- Add workflow_run triggers to create proper execution order:
  1. Unit Tests (runs first, no dependencies)
  2. Integration Tests (depends on Unit Tests success)
  3. Service Validation (depends on Integration Tests success)
  4. Docker Build (depends on Service Validation success)
  5. End-to-End Validation (depends on Docker Build success)

- Add conditional execution with if statements to ensure workflows
  only run when previous workflow succeeded
- Maintain manual trigger capability with workflow_dispatch
- Preserve direct push/PR triggers for immediate feedback

This ensures:
- Logical progression through pipeline stages
- No wasted resources on failed dependencies
- Clear failure points and debugging
- Proper artifact dependencies between stages
- Sequential execution with parallel stages within each workflow

--- a/.github/workflows/e2e-validation.yml
+++ b/.github/workflows/e2e-validation.yml
@@ -6,11 +6,15 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Docker Build"]
+    types: [completed]
 
 jobs:
   e2e-validation:
     name: End-to-End Validation
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
