--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Service Validation"]
+    types: [completed]
 
 env:
   IMAGE_NAME_BASE: admingentoro/gentoro
@@ -15,6 +18,7 @@ jobs:
   docker-build:
     name: Docker Build
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
