--- a/.github/workflows/service-validation.yml
+++ b/.github/workflows/service-validation.yml
@@ -6,11 +6,15 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Integration Tests"]
+    types: [completed]
 
 jobs:
   service-validation:
     name: Service Validation
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
     continue-on-error: false  # Service validation is critical
     steps:
     - name: Checkout code
