--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -1,4 +1,4 @@
-name: Service Validation
+name: CI Checks
 
 on:
   push:
@@ -6,15 +6,176 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-  workflow_run:
-    workflows: ["Integration Tests"]
-    types: [completed]
 
 jobs:
+  # Stage 1: Unit Tests - Fast feedback for code quality
+  unit-tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    
+    - name: Cache npm dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-npm-${{ hashFiles('src/typescript-runtime/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-npm-
+          ${{ runner.os }}-
+    
+    - name: Test mcpagent (Unit Tests Only)
+      run: |
+        cd src/mcpagent
+        echo "Running mcpagent unit tests..."
+        mvn test -Dtest="AgentServiceTest,TelemetryServiceTracingTest,TelemetryServiceMetricsTest,LogContextTest,TelemetryConfigTest,KnowledgeBaseServiceImplTest,FileKnowledgeBasePersistenceTest,OrchestratorImplTest,AgentServiceConfigTest"
+    
+    - name: Test acme-analytics-server
+      run: |
+        cd src/acme-analytics-server/server
+        echo "Running acme-analytics-server tests..."
+        mvn test
+    
+    - name: Test typescript-runtime
+      run: |
+        cd src/typescript-runtime
+        echo "Installing dependencies..."
+        npm install --legacy-peer-deps
+        echo "Running typescript-runtime tests..."
+        npm test
+    
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: unit-test-results
+        path: |
+          src/mcpagent/target/surefire-reports/
+          src/acme-analytics-server/server/target/surefire-reports/
+          src/typescript-runtime/coverage/
+        retention-days: 7
+
+  # Stage 2: Integration Tests - Test component interactions (optional)
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    continue-on-error: true  # Don't fail pipeline if integration tests fail
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    
+    - name: Cache npm dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-npm-${{ hashFiles('src/typescript-runtime/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-npm-
+          ${{ runner.os }}-
+    
+    - name: Create foundation directory
+      run: |
+        sudo mkdir -p /var/foundation
+        sudo chmod 777 /var/foundation
+    
+    - name: Install TypeScript runtime dependencies
+      run: |
+        cd src/typescript-runtime
+        echo "Installing TypeScript runtime dependencies..."
+        npm install --legacy-peer-deps
+    
+    - name: Start TypeScript runtime server
+      run: |
+        cd src/typescript-runtime
+        echo "Starting TypeScript runtime server on port 3000..."
+        npm run dev &
+        SERVER_PID=$!
+        echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
+        # Wait for server to start
+        sleep 15
+        # Check if server is running by trying to connect
+        for i in {1..5}; do
+          if curl -f http://localhost:3000/run -X POST -H "Content-Type: application/json" -d '{"snippet":"console.log(\"test\")"}' 2>/dev/null; then
+            echo "TypeScript runtime server is ready"
+            break
+          else
+            echo "Waiting for server to start... attempt $i/5"
+            sleep 5
+          fi
+        done
+    
+    - name: Run mcpagent integration tests
+      run: |
+        cd src/mcpagent
+        echo "Running mcpagent integration tests..."
+        # Run integration tests and capture exit code
+        if mvn test -Dtest="*IntegrationTest"; then
+          echo "Integration tests passed"
+        else
+          echo "Integration tests failed - this may be expected if external dependencies are not available"
+          # Don't fail the entire pipeline for integration test failures
+          exit 0
+        fi
+    
+    - name: Stop TypeScript runtime server
+      if: always()
+      run: |
+        if [ ! -z "$SERVER_PID" ]; then
+          echo "Stopping TypeScript runtime server (PID: $SERVER_PID)"
+          kill $SERVER_PID || echo "Server already stopped"
+        fi
+    
+    - name: Upload integration test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: integration-test-results
+        path: src/mcpagent/target/surefire-reports/
+        retention-days: 7
+
+  # Stage 3: Service Validation - Build, test HTTP services and artifacts
   service-validation:
     name: Service Validation
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
+    needs: integration-tests
     continue-on-error: false  # Service validation is critical
     steps:
     - name: Checkout code
@@ -332,3 +493,127 @@ jobs:
           src/acme-analytics-server/server/target/*.jar
           src/typescript-runtime/dist/
         retention-days: 7
+
+  # Stage 4: Docker Build - Multi-platform container builds
+  docker-build:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: service-validation
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64]
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build-artifacts
+        path: .
+    
+    - name: Verify artifacts for Docker build
+      run: |
+        echo "Verifying artifacts are available for Docker build..."
+        
+        # Check mcpagent JAR
+        MCPAGENT_JAR=$(find src/mcpagent/target -name "*.jar" -not -name "*-sources.jar" -not -name "*-javadoc.jar" | head -1)
+        if [ -f "$MCPAGENT_JAR" ]; then
+          echo "✅ mcpagent JAR found: $MCPAGENT_JAR"
+          ls -la "$MCPAGENT_JAR"
+        else
+          echo "❌ mcpagent JAR not found"
+          exit 1
+        fi
+        
+        # Check acme-analytics-server JAR
+        ACME_JAR=$(find src/acme-analytics-server/server/target -name "*.jar" -not -name "*-sources.jar" -not -name "*-javadoc.jar" | head -1)
+        if [ -f "$ACME_JAR" ]; then
+          echo "✅ acme-analytics-server JAR found: $ACME_JAR"
+          ls -la "$ACME_JAR"
+        else
+          echo "❌ acme-analytics-server JAR not found"
+          exit 1
+        fi
+        
+        # Check typescript-runtime dist
+        if [ -d "src/typescript-runtime/dist" ]; then
+          echo "✅ typescript-runtime dist found"
+          ls -la src/typescript-runtime/dist/
+        else
+          echo "❌ typescript-runtime dist not found"
+          exit 1
+        fi
+    
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Install xmllint
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libxml2-utils
+    
+    - name: Extract version from POM
+      id: version
+      run: |
+        POM_FILE="src/mcpagent/pom.xml"
+        CURRENT_VERSION=$(xmllint --xpath "/*[local-name()='project']/*[local-name()='version']/text()" "$POM_FILE")
+        VERSION_NUMBER=${CURRENT_VERSION%-SNAPSHOT}
+        echo "version=$VERSION_NUMBER" >> $GITHUB_OUTPUT
+        echo "full_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+        echo "Current version: $CURRENT_VERSION (testing: $VERSION_NUMBER)"
+    
+    - name: Build base image
+      run: |
+        VERSION="${{ steps.version.outputs.version }}"
+        echo "Building base image for ${{ matrix.platform }}..."
+        ./scripts/docker/build-base.sh "$VERSION" "" --platform "${{ matrix.platform }}"
+    
+    - name: Build product image
+      run: |
+        VERSION="${{ steps.version.outputs.version }}"
+        POM_VERSION=$(xmllint --xpath "/*[local-name()='project']/*[local-name()='version']/text()" src/mcpagent/pom.xml)
+        JAR_NAME="mcpagent-$POM_VERSION.jar"
+        echo "Building product image for ${{ matrix.platform }}..."
+        
+        ./scripts/docker/build-product.sh "$VERSION" "$JAR_NAME" "" --platform "${{ matrix.platform }}"
+
+  # Stage 5: End-to-End Validation - Final service testing with Docker
+  e2e-validation:
+    name: End-to-End Validation
+    runs-on: ubuntu-latest
+    needs: docker-build
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64]
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Install xmllint
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libxml2-utils
+    
+    - name: Extract version from POM
+      id: version
+      run: |
+        POM_FILE="src/mcpagent/pom.xml"
+        CURRENT_VERSION=$(xmllint --xpath "/*[local-name()='project']/*[local-name()='version']/text()" "$POM_FILE")
+        VERSION_NUMBER=${CURRENT_VERSION%-SNAPSHOT}
+        echo "version=$VERSION_NUMBER" >> $GITHUB_OUTPUT
+        echo "full_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+        echo "Current version: $CURRENT_VERSION (testing: $VERSION_NUMBER)"
+    
+    - name: Validate services
+      run: |
+        VERSION="${{ steps.version.outputs.version }}"
+        PLATFORM="${{ matrix.platform }}"
+        echo "Validating services on $PLATFORM..."
+        
+        # Use the validation script
+        chmod +x scripts/docker/validate-services.sh
+        ./scripts/docker/validate-services.sh "$VERSION" "$PLATFORM"
