--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -528,6 +528,7 @@ jobs:
     name: Docker Build
     runs-on: ubuntu-latest
     needs: service-validation
+    if: always() && (needs.service-validation.result == 'success' || needs.service-validation.result == 'skipped')
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
@@ -535,11 +536,62 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    
+    - name: Cache npm dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-npm-${{ hashFiles('src/typescript-runtime/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-npm-
+          ${{ runner.os }}-
+    
     - name: Download build artifacts
       uses: actions/download-artifact@v4
+      continue-on-error: true
       with:
         name: build-artifacts
         path: .
+    
+    - name: Build artifacts if not available
+      if: failure()
+      run: |
+        echo "Artifacts not available, building them now..."
+        
+        # Build mcpagent
+        echo "Building mcpagent..."
+        cd src/mcpagent
+        mvn clean package spring-boot:repackage -DskipTests
+        
+        # Build acme-analytics-server
+        echo "Building acme-analytics-server..."
+        cd ../acme-analytics-server/server
+        mvn clean package -DskipTests
+        
+        # Build typescript-runtime
+        echo "Building typescript-runtime..."
+        cd ../../typescript-runtime
+        npm install --legacy-peer-deps
+        npm run build
+        
+        cd ../..
     
     - name: Verify artifacts for Docker build
       run: |
