refactor: rename service-validation to build-and-service-validation
- Rename job from 'service-validation' to 'build-and-service-validation'
- Update job name to 'Build & Service Validation'
- Update job dependency in docker-build-and-validate stage
- Update stage comment to better reflect the job's purpose
- Add validate-containers.sh script (renamed from validate-services.sh)
- Remove old validate-services.sh script

This eliminates confusion with integration-tests and clearly indicates
that this stage builds artifacts and validates service deployment.

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -194,9 +194,9 @@ jobs:
         path: src/mcpagent/target/surefire-reports/
         retention-days: 7
 
-  # Stage 3: Service Validation - Build, test HTTP services and artifacts
-  service-validation:
-    name: Service Validation
+  # Stage 3: Build & Service Validation - Build artifacts and validate service deployment
+  build-and-service-validation:
+    name: Build & Service Validation
     runs-on: ubuntu-latest
     needs: integration-tests
     continue-on-error: true  # Make service validation optional due to external dependencies
@@ -604,8 +604,8 @@ jobs:
   docker-build-and-validate:
     name: Docker Build & Container Validation
     runs-on: ubuntu-latest
-    needs: service-validation
-    if: always() && (needs.service-validation.result == 'success' || needs.service-validation.result == 'skipped')
+    needs: build-and-service-validation
+    if: always() && (needs.build-and-service-validation.result == 'success' || needs.build-and-service-validation.result == 'skipped')
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
