fix: optimize Docker builds for cross-platform support
- Use docker buildx build --load for ARM64 builds to handle cross-platform properly
- Use docker build only for native AMD64 builds for better performance
- Make QEMU setup conditional (only for ARM64 builds) to reduce overhead
- Ensure both AMD64 and ARM64 builds work without Docker Hub dependency

This fixes ARM64 build failures while optimizing performance for both platforms.

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -745,6 +745,7 @@ jobs:
         fi
     
     - name: Set up QEMU
+      if: matrix.platform == 'linux/arm64'
       uses: docker/setup-qemu-action@v3
     
     - name: Set up Docker Buildx
