fix: optimize Docker builds for cross-platform support and fix PowerShell scripts
- Fix ARM64 builds to work without Docker Hub dependency by using docker build with --platform flag
- Add base image fallback logic to use base-latest when versioned base image not found
- Make QEMU setup conditional (only for ARM64 builds) to reduce overhead for AMD64 builds
- Update CI workflow with robust base image verification that matches build script fallback logic
- Fix PowerShell scripts to match bash script functionality with proper base image detection
- Ensure both AMD64 and ARM64 builds work reliably in CI/CD pipeline

This resolves ARM64 build failures while optimizing performance for both platforms.

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -774,7 +774,16 @@ jobs:
         
         echo "Verifying base image was built..."
         docker images | grep "admingentoro/gentoro" || echo "No gentoro images found"
-        docker image inspect "admingentoro/gentoro:base-$VERSION" || echo "Base image not found locally"
+        
+        # Check for both versioned and latest base images
+        if docker image inspect "admingentoro/gentoro:base-$VERSION" >/dev/null 2>&1; then
+          echo "✅ Base image admingentoro/gentoro:base-$VERSION found"
+        elif docker image inspect "admingentoro/gentoro:base-latest" >/dev/null 2>&1; then
+          echo "✅ Base image admingentoro/gentoro:base-latest found (will be used as fallback)"
+        else
+          echo "❌ No base image found locally"
+          exit 1
+        fi
     
     - name: Build product image
       run: |
@@ -785,7 +794,16 @@ jobs:
         
         echo "Checking if base image exists before building product image..."
         docker images | grep "admingentoro/gentoro" || echo "No gentoro images found"
-        docker image inspect "admingentoro/gentoro:base-$VERSION" || echo "Base image not found locally"
+        
+        # Check for both versioned and latest base images (product script has fallback logic)
+        if docker image inspect "admingentoro/gentoro:base-$VERSION" >/dev/null 2>&1; then
+          echo "✅ Base image admingentoro/gentoro:base-$VERSION found"
+        elif docker image inspect "admingentoro/gentoro:base-latest" >/dev/null 2>&1; then
+          echo "✅ Base image admingentoro/gentoro:base-latest found (will be used as fallback)"
+        else
+          echo "❌ No base image found locally"
+          exit 1
+        fi
         
         ./scripts/docker/build-product.sh "$VERSION" "$JAR_NAME" "" --platform "${{ matrix.platform }}"
     
