feat: Add comprehensive service validation to CI checks
- Add TypeScript Runtime service health validation
- Add Mock Server (ACME Analytics) service health validation
- Add OpenTelemetry Collector service health validation
- Update release.yml to build ACME Analytics Server and TypeScript Runtime
- All validation scripts tested and working with Docker container
- Services validated: TypeScript Runtime (port 3000), Mock Server (port 8082),
  OpenTelemetry Collector (ports 4317/4318), Main Application (port 8080)
- Validation includes process status, port accessibility, endpoint testing,
  and error detection for robust CI/CD pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -213,6 +213,19 @@ jobs:
         cd src/mcpagent
         ./mvnw -q -DskipTests package spring-boot:repackage || mvn -q -DskipTests package spring-boot:repackage
     
+    - name: Build ACME Analytics Server
+      if: github.event_name == 'push' || github.event.inputs.dry_run != true
+      run: |
+        cd src/acme-analytics-server/server
+        ./build.sh
+    
+    - name: Build TypeScript Runtime
+      if: github.event_name == 'push' || github.event.inputs.dry_run != true
+      run: |
+        cd src/typescript-runtime
+        npm install --legacy-peer-deps
+        npm run build
+    
     - name: Build and push product image
       if: github.event_name == 'push' || github.event.inputs.dry_run != true
       run: |
